# dummy-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dummy-api.cabal  stack.yaml
app/: Main.hs
docs/: README.md
src/Dummy/Api/: Api.hs  Auth.hs  BuildDocs.hs  Config.hs  Docs.hs  Models.hs  Types.hs
