name:                dummy-api
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/denibertovic/dummy-api#readme
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic
maintainer:          deni@denibertovic.com
copyright:           BSD3
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dummy.Api.Api
                     , Dummy.Api.Models
                     , Dummy.Api.Config
                     , Dummy.Api.Docs
  build-depends:       base >= 4.7 && < 5
                     , esqueleto
                     , uuid
                     , text
                     , bytestring
                     , transformers
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , persistent-sqlite
                     , servant >= 0.4.4.6
                     , servant-server >= 0.4.4.6
                     , servant-docs >= 0.4.4.6
                     , http-types
                     , mtl
                     , either
                     , aeson
                     , attoparsec
                     , string-conversions
                     , time
                     , http-media
                     , network
                     , directory
                     , blaze-markup
                     , blaze-html
                     , wai
                     , warp
                     , monad-logger
                     , wai-extra
                     , lucid
 default-language:    Haskell2010

executable dummy-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dummy-api
                     , retry
                     , extra
                     , warp
                     , persistent-postgresql
  default-language:    Haskell2010

test-suite dummy-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dummy-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/dummy-api

